[project]
name = "tts-fresh"
description = "Standardized static flight rule checking for common types."
readme = "README.md"
requires-python = ">=3.6"
license = {text = "Unlicense"}
authors = [
  { name = "winner", email = "emily.winner@jpl.nasa.gov" },
  { name = "dlegg", email = "david.legg@jpl.nasa.gov" },
  { name = "muszynsk", email = "matt.muszynski@jpl.nasa.gov" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Unlicense",
]
dependencies = [
  'arrow==1.2.3',
  'colorama',
  'lxml',
  'dataclasses',
  "tts-utilities>=0.2.1,<1.0.0", 
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.jpl.nasa.gov/teamtools-studio/tts-fresh"

[project.scripts]
fresh = "fresh.run_fresh:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.setuptools.package-data]
"*" = ["*.csv", "*.json"]

[build-system]
requires = [
  "setuptools", 
  "wheel", 
  "toml", 
  "tts-utilities>=0.2.1,<1.0.0", 
  "tts-seq>=0.2.0,<1.0.0", 
  "setuptools-scm"
  ]
build-backend = "setuptools.build_meta"
